--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-.App {
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+/* .App {
   text-align: center;
 }
 
@@ -34,5 +38,20 @@
   }
   to {
     transform: rotate(360deg);
-  }
+  }}*/
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+button:focus {
+  outline: none;
 }
